[tool.poetry]
name = "ancufi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torchsde = "^0.2.5"
tqdm = "^4.64.0"
torch = "^1.12.0"
jupyter = "^1.0.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
torchvision = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
